1.14.0 (April XX, 2024)
 - Added support for Semver matchers.
 - Updated impression label to 'unsupported matcher type' when the matcher type is not supported by the SDK.

1.13.1 (January 10, 2024)
 - Updated client `destroy` method to release SDK key immediately and avoid unexpected warning logs when a factory is created with the same SDK key after the previous one was destroyed.

1.13.0 (January 4, 2024)
 - Removed the `getOptions` method from the `IPlatform` interface to simplify implementation. Request options can be handled within the `getFetch` method.

1.12.1 (December 12, 2023)
 - Updated PluggableStorage, for producer mode, and LocalStorage, for standalone mode, to clear the storage before initiating the synchronization process if it was previously synchronized with a different SDK key (i.e., a different environment) or different Split Filter criteria.
 - Bugfixing - Fixed an issue when tracking telemetry latencies for the new `getTreatmentsByFlagSet(s)` methods in Redis and Pluggable storages, which was causing the SDK to not track those stats.

1.12.0 (December 4, 2023)
 - Added support for Flag Sets in "consumer" and "partial consumer" modes for Pluggable and Redis storages.
 - Updated evaluation flow to log a warning when using flag sets that don't contain cached feature flags.
 - Updated Redis adapter to handle timeouts and queueing of some missing commands: 'hincrby', 'popNRaw', and 'pipeline.exec'.
 - Bugfixing - Fixed manager methods in consumer modes to return results in a promise when the SDK is not operational (not ready or destroyed).

1.11.0 (November 3, 2023)
 - Added support for Flag Sets on the SDK, which enables grouping feature flags and interacting with the group rather than individually (more details in our documentation):
   - Added new variations of the get treatment methods to support evaluating flags in given flag set/s.
     - getTreatmentsByFlagSet and getTreatmentsByFlagSets