@@ -5,4 +5,4 @@ export const SDK_NOT_READY = 'not ready';
 export const EXCEPTION = 'exception';
 export const SPLIT_ARCHIVED = 'archived';
 export const NOT_IN_SPLIT = 'not in split';
-export const UNSUPPORTED_MATCHER_TYPE = 'unsupported matcher type';
+export const UNSUPPORTED_MATCHER_TYPE = 'targeting rule type unsupported by sdk';
